<resources>
    <string name="app_name">Mero First App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="text_login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>