<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/sign_up_background">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/sign_up_icon_20" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_background"
        android:inputType="number"
        android:padding="10dp"
        android:text="@string/phone"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_background"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAlignment="center"
        android:background="@drawable/edit_background"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_background"
        android:textAlignment="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_background"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAlignment="center"
        android:background="@drawable/edit_background"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="100dp"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:background="@drawable/login_button"/>



</LinearLayout>